# n9r

./: .env.example  .gitignore  AI_SCAN_EXPLAINED.md  ANALYSIS_COMPARISON.md  ARCHITECTURE_ANALYSIS.md  DEEP_ANALYSIS.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  REFACTORING_PLAN.md  docker-compose.prod.yml  docker-compose.yml  progress.md
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/.hypothesis/constants/: 4477f06880b1f34c  50e1630e9a26077d  5588a4de016c3e4f  62e65f23ce78a2cb  67ec68784b70a01c  9e2d5e983064b64a  ab5abd5102f38fa0  b8347dd9183c6499  b8e161c0fff23c18  bc692b4708d2f163  bd3cf1629d30a0f9  be3efd75c4baea6f  edde3ef7fd485f01  fabde9b9b5664342
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_fix_organization_schema.py  003_fix_chat_threads_schema.py  004_fix_auto_prs_schema.py  005_add_semantic_cache.py  006_add_ai_scan_cache.py  007_add_embeddings_tracking.py  008_add_ai_scan_tracking.py  009_add_architecture_findings.py  010_add_generating_insights_status.py  011_add_scoring_columns.py  012_add_chat_thread_model.py  013_add_chat_messages_updated_at.py  014_chat_messages_role_to_text.py  015_fix_chat_messages_role_column.py  015_fix_chat_role.py  016_chat_msg_updated_at_default.py  017_add_analysis_pinned_column.py  018_add_repo_content_cache.py  019_add_chat_message_context_ref.py  020_add_full_tree_to_content_cache.py
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  ai_scan.py  analyses.py  architecture.py  auth.py  auto_prs.py  chat.py  health.py  issues.py  playground.py  repositories.py  semantic.py  users.py  webhooks.py
backend/app/core/: __init__.py  celery.py  config.py  database.py  encryption.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  analysis.py  auto_pr.py  base.py  chat.py  dead_code.py  file_churn.py  issue.py  organization.py  repo_content_cache.py  repo_content_object.py  repo_content_tree.py  repository.py  semantic_ai_insight.py  subscription.py  user.py
backend/app/schemas/: __init__.py  ai_scan.py  analysis.py  architecture_findings.py  architecture_llm.py  auth.py  chat.py  common.py  issue.py  organization.py  qdrant_payload.py  repository.py  user.py
backend/app/services/: __init__.py  analysis_state.py  architecture_findings_service.py  ast_analyzer.py  broad_scan_agent.py  call_graph_analyzer.py  cluster_analyzer.py  code_chunker.py  coverage_analyzer.py  git_analyzer.py  github.py  issue_investigator.py  issue_merger.py  lizard_analyzer.py  llm_gateway.py  object_storage.py  repo_analyzer.py  repo_content.py  repo_view_generator.py  sandbox.py  scoring.py  semantic_ai_insights.py  vci_calculator.py  vector_store.py
backend/app/services/agents/: __init__.py  diagnosis.py  fix.py  orchestrator.py  test.py
backend/app/workers/: __init__.py  ai_scan.py  analysis.py  embeddings.py  healing.py  helpers.py  notifications.py  repo_content_gc.py  scheduled.py
backend/scripts/: delete_vectors.py  generate_repo_embeddings.py  init_all.py  init_minio.py  init_qdrant.py  migrate_qdrant_commit_aware.py  migrate_qdrant_v2.py  recreate_qdrant_collection.py  test_ai_apis.py  test_bedrock_response.py
backend/tests/: test_ai_scan_api.py  test_ai_scan_cache.py  test_ai_scan_integration.py  test_ai_scan_schemas.py  test_ai_scan_state_transitions.py  test_ai_scan_worker.py  test_analysis_heartbeat.py  test_analysis_no_existence_leak.py  test_analysis_state_constraints.py  test_analysis_state_service.py  test_analysis_worker_status.py  test_architecture_findings_api.py  test_ast_analyzer.py  test_balanced_filter.py  test_broad_scan_agent.py  test_call_graph_analyzer.py  test_chat_cache_integration.py  test_chat_models_api.py  test_cluster_analyzer_llm.py  test_commit_schemas.py  test_coverage_analyzer.py  test_dotfiles_visibility.py  test_embedding_progress.py  test_embeddings_workflow.py  test_fix_full_tree.py  test_full_status_api.py  test_git_analyzer.py  test_github_service.py  test_issue_investigator.py  test_issue_merger.py  test_jwt_expiration.py  test_object_storage.py  test_parallel_dispatch.py  test_parallel_embeddings.py  test_parallel_pipeline_integration.py  test_parallel_progress.py  test_repo_content_cache.py  test_repo_view_generator.py  test_scoring_service.py  test_semantic_ai_insights.py  (+5 more)
frontend/: components.json  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FlyingGhost.tsx  FlyingPumpkin.tsx  LiquidEther.tsx  Navbar.tsx  agent-logs-panel.tsx  ai-insights-panel.tsx  (+29 more)
scripts/: pre-push-check.sh
(+54 files in other folders)
