[project]
name = "n9r-backend"
version = "0.1.0"
description = "n9r - AI Code Detox & Auto-Healing Platform Backend"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "qdrant-client>=1.7.0",
    "minio>=7.2.3",
    "litellm>=1.40.0",
    "boto3>=1.34.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "tenacity>=8.2.3",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "docker>=7.0.0",
    "radon>=6.0.1",
    "lizard>=1.17.10",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0,<1.19.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = [
    "E501",   # Line too long
    "E402",   # Module level import not at top of file
    "B904",   # Within except clause, raise with from
    "B017",   # Do not assert blind exception
    "B008",   # Function call in default argument (FastAPI Query/Depends pattern)
]

[tool.mypy]
python_version = "3.11"
# Relaxed mode - strict typing is aspirational, not enforced yet
# Focus on catching real bugs, not missing annotations
strict = false
ignore_missing_imports = true
# Disable some strict checks that create noise in large codebases
# These are runtime-safe patterns that mypy flags
disable_error_code = [
    "var-annotated",      # Missing type annotations for variables (dict = {})
    "union-attr",         # Optional attribute access (x.get() where x may be None)
    "arg-type",           # Argument type mismatches (often enums or Filter objects)
    "assignment",         # Float/int assignment mismatches
    "call-arg",           # Missing named arguments
    "attr-defined",       # Attribute not defined (QdrantClient.search deprecated)
    "index",              # Indexing issues
    "return-value",       # Return type mismatches
    "call-overload",      # Overload matching issues
]
# Exclude tests, scripts, and migrations from type checking
exclude = [
    "tests/",
    "scripts/",
    "alembic/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
